Cycles camera view only rendering glitch #29935

Closed
opened 2012-01-20 14:34:01 +01:00 by Danny McGrath · 9 comments
Member

%%%Using Ubuntu 64bit r43554

I attached a sample blend and picture of the problem. If you look at the camera preview of a simple cube+plane scene in cycles, the plane seems to extend in the Z like it is following some sort of imaginary perspective lines that eventually converge into a single point.

It only seems to happen in the camera view though.%%%

%%%Using Ubuntu 64bit r43554 I attached a sample blend and picture of the problem. If you look at the camera preview of a simple cube+plane scene in cycles, the plane seems to extend in the Z like it is following some sort of imaginary perspective lines that eventually converge into a single point. It only seems to happen in the camera view though.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%I also had another side bug, but I didn't feel it warranted its own report:

If you remove the world settings for this scene, I noticed that wheeling in/out in the camera preview, triggers cycles to rerender, but still seems to have the old world settings in effect until I do a change like tab into and out of edit mode on the cube to cause an update. ie: the purplish background stays in place and only goes to black if I enter/leave edit mode on the cube, even though the world settings were deleted.

Anyways, seems minor and probably expected cause of all the depsgraph stuff, but thought you might want to know. Later o/%%%

%%%I also had another side bug, but I didn't feel it warranted its own report: If you remove the world settings for this scene, I noticed that wheeling in/out in the camera preview, triggers cycles to rerender, but still seems to have the old world settings in effect until I do a change like tab into and out of edit mode on the cube to cause an update. ie: the purplish background stays in place and only goes to black if I enter/leave edit mode on the cube, even though the world settings were deleted. Anyways, seems minor and probably expected cause of all the depsgraph stuff, but thought you might want to know. Later o/%%%

%%%First issue isn't actually a bug. You just zoomed out too much. "Artifacts" like this plane are quite common when zooming out perspective camera too much. It's just how perspective works :)

Second issue indeed seems like missed update trigger or so. Brecht, can you please check removing world settings?%%%

%%%First issue isn't actually a bug. You just zoomed out too much. "Artifacts" like this plane are quite common when zooming out perspective camera too much. It's just how perspective works :) Second issue indeed seems like missed update trigger or so. Brecht, can you please check removing world settings?%%%
Author
Member

%%%I just happened to be zoomed out alot in that picture to see the extent, but even with it is zoomed in via "home" to fit the window, you can still see it extend down. But if you say this is expected, then I will take your word for it :) I just thought it was a bug since it only happened in camera view (well, perspective).%%%

%%%I just happened to be zoomed out alot in that picture to see the extent, but even with it is zoomed in via "home" to fit the window, you can still see it extend down. But if you say this is expected, then I will take your word for it :) I just thought it was a bug since it only happened in camera view (well, perspective).%%%

%%%I can't confirm the missing world update with SVN 43527. If I remove the sky texture or the complete background, the viewport updates to the correct result immediately. %%%

%%%I can't confirm the missing world update with SVN 43527. If I remove the sky texture or the complete background, the viewport updates to the correct result immediately. %%%
Author
Member

%%%Ahh, I just looked at the scene in wireframe mode while in camera view, and I see why the perspective is to blame now. I guess it just wasn't so obvious when looking at it in cycles, my apologies! (guess I had the bugs priorities backwards hehe)

As for Thomas's reply, I get correct/expected results if I just delete the sky texture node, but the problem I have is when I unlink the datablock for the world settings.

ie: Go to world panel and click the "X" beside the "World" texture. Wheel zooming still refreshes cycles, but it keeps the background.%%%

%%%Ahh, I just looked at the scene in wireframe mode while in camera view, and I see why the perspective is to blame now. I guess it just wasn't so obvious when looking at it in cycles, my apologies! (guess I had the bugs priorities backwards hehe) As for Thomas's reply, I get correct/expected results if I just delete the sky texture node, but the problem I have is when I unlink the datablock for the world settings. ie: Go to world panel and click the "X" beside the "World" texture. Wheel zooming still refreshes cycles, but it keeps the background.%%%
Author
Member

%%%As a bit of a catch up from irc, it was pointed out by Thomas that tabbing into edit mode while cycles is rendering, after you had unlinked the world datablock, it would crash.

At first I didn't get the crash, having just downgraded back to r43527, but I do get the crash after having svn up'd back to r43569. I will attach the backtrace to this report%%%

%%%As a bit of a catch up from irc, it was pointed out by Thomas that tabbing into edit mode while cycles is rendering, after you had unlinked the world datablock, it would crash. At first I didn't get the crash, having just downgraded back to r43527, but I do get the crash after having svn up'd back to r43569. I will attach the backtrace to this report%%%

%%%Fix crash and missing update in svn, thanks for the report.%%%

%%%Fix crash and missing update in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29935
No description provided.