Fix #29935: missing cycles update/crash when removing world datablock form scene.